clojure 1.9 profile; lein-git